# diabetes-capstone

./: .gitignore  CAPSTONE-HUB.md  Makefile  README.md  config.yaml  data_card.md  environment.yml  model_card.md  paths.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
docs/dev/: git_safety_protocol.md
kaggle/: diabetes_capstone_report.ipynb
notebooks/: 01_eda.ipynb  Readme.md  UCI_Diabetes_Week1-2_Starter.ipynb  Week1-2_Readme.md  Week3-4_Readme.md  _TEMPLATE.ipynb  eda_correlation.ipynb  load_diabetes_dataset.ipynb
notebooks/Complex/: _TEMPLATE.ipynb  load_diabetes_dataset-complex.ipynb  sql_practice_diabetes-complex.ipynb
notebooks/eda/: 02_feature_relationships_and_correlation.ipynb
notebooks/sql/: sql_practice_diabetes.ipynb
reports/sql/: outcome_counts.csv  rows_count.csv
reports/tables/: diabetes_corr_kendall_Outcome.csv  diabetes_corr_pearson_Outcome.csv  diabetes_corr_spearman_Outcome.csv
src/: _env_setup.py  corrmatrix.py  data.py  evaluate.py  features.py  io_utils.py  leakage.py  metrics.py  presets.py  project_paths.py  subgroup.py  threshold.py  train.py  utils.py
src/ds_viz/: README.md  __init__.py  corrmatrix.py
src/proj/: __init__.py  db.py  setup.py
tests/: test_corrmatrix.py  test_data_schema.py  test_env.py  test_metrics.py
utils/: audit_paths.py  debug_env.py
