[project]
name = "ds-viz"
version = "0.1.0"
description = "Reusable visualization helpers for Diabetes-Capstone"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ds_viz", "capstone", "proj"]   
py-modules = ["project_paths"]                   # ← expose src/project_paths.py

[project.optional-dependencies]
dev = ["pytest"]
